--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,9 @@ dependencies:
 #  flutter_local_notifications: any
   # FaceBook Login
 #  flutter_login_facebook: ^1.8.0
-  flutter_local_notifications: ^9.7.0
+  flutter_local_notifications: ^9.7.04
+  change_app_package_name: ^1.1.0
+
 
   # Apple Login
   sign_in_with_apple: ^4.2.0
